<resources>
    <string name="app_name">Image Analysis</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="select_an_image_from_phone">Select an image from phone</string>
    <string name="select_image">Select Image</string>
    <string name="hex_000000">HEX: #000000</string>
    <string name="color_information">Result of mmol/l: </string>
    <string name="information">This is where the information about the color will be shown after analysis.</string>
    <string name="image_analysis">Image Analysis</string>
    <string name="other_info">Please Note..... \n\nBlack is the default color, if no image was taken, you can also touch the part of the image to get the color from it.</string>
    <string name="color_from_image">Color from Image :-</string>
</resources>